# Ixal

./: README.md  add.py  ldns.py  pyproject.toml  requirements.txt
Ixal/: __init__.py  __main__.py  build.py  cmd.py  download.py  extract.py  latest.py  logging.py  main.py  pack.py  preproc.py  repo.py  task.py  tidy.py  unit.py  ver.py
examples/: winpy.py
